# ghn

./: Cargo.toml  LICENSE  README.md
src/: main.rs
ui/: main.slint
