[package]
name = "ghn"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.23"
slint = "1.3.2"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
home = "0.5.9"
open = "5.0.1"

[build-dependencies]
slint-build = "1.3.2"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
